created filters for movie
