# backend/domain/src/main/java/sk/posam/fsa/streaming/domain/models/entities/Movie.java
@@ -11,8 +11,13 @@ public class Movie extends MediaContent {
     private List<Video> videos = new ArrayList<>();
     private Integer duration;
 
-    public Movie(Long id, String title, String slug, LocalDate releaseDate, Integer releaseYear, String description, List<Genre> genres, String actors, String directors, String trailerUrl, List<String> countries, LocalDateTime createdAt, LocalDateTime updatedAt, User createdBy, User updatedBy, String type, Double globalRating, List<Comment> comments, Integer commentsTotal, String posterImg, String coverImg, List<Video> videos, Integer duration) {
-        super(id, title, slug, releaseDate, releaseYear, description, genres, actors, directors, trailerUrl, countries, createdAt, updatedAt, globalRating, comments, commentsTotal, posterImg, coverImg);
+    public Movie(Long id, String title, String slug, LocalDate releaseDate, Integer releaseYear, String description,
+                 List<Genre> genres, String actors, String directors, String trailerUrl, List<String> countries,
+                 LocalDateTime createdAt, LocalDateTime updatedAt, User createdBy, User updatedBy, String type,
+                 Float globalRating, List<Comment> comments, Integer commentsTotal, String posterImg, String coverImg,
+                 List<Video> videos, Integer duration) {
+        super(id, title, slug, releaseDate, releaseYear, description, genres, actors, directors, trailerUrl,
+                countries, createdAt, updatedAt, globalRating, comments, commentsTotal, posterImg, coverImg);
         this.videos = videos;
         this.duration = duration;
     }
